--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 add_executable(RoseRPG 
                     main.cpp Application.cpp
                     Graphics/GameWindow.cpp Graphics/SpriteSheet.cpp 
-                    World/Tilemap.cpp World/TileSet.cpp World/World.cpp Entities/Entity.cpp )
+                    World/Tilemap.cpp World/TileSet.cpp World/World.cpp Entities/Entity.cpp Events/EventManager.cpp)
 
 target_link_libraries(RoseRPG 
     raylib
